<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/info"
          android:title="@string/info"
          android:icon="@drawable/ic_menu_view"
        />

    <item android:id="@+id/menu_modify"
          android:title="@string/menu_modify"
          android:icon="@drawable/ic_menu_edit"
        />

    <item android:id="@+id/menu_share"
          android:enabled="false"
          android:icon="@drawable/ic_menu_share"
          android:title="@string/export_kml" />

    <item android:id="@+id/menu_merge"
          android:enabled="false"
          android:title="@string/merge" />


    <item android:id="@+id/menu_delete"
          android:title="@string/delete"
          android:icon="@drawable/ic_menu_delete"
        />
</menu>
